# acid4sigmas-auth

./: Cargo.toml  README.md
src/: main.rs  router.rs
src/controller/: auth.rs
src/services/: ws.rs
src/services/auth/: email.rs  login.rs  mod.rs  registration.rs
