[package]
name = "acid4sigmas-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-ws = "0.3.0"
futures-util = "0.3.31"
anyhow = "1.0.89"
acid4sigmas-models = { path = "../acid4sigmas-model"}
tokio-tungstenite =  { version = "*", features = ["tls"] }
tungstenite = "0.17"
tokio = { version = "1.41.0", features = ["full"] }
url = "2.5.2"
once_cell = "1.20.2"
serde_json = "1.0.132"

async-trait = "0.1.83"
